--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
     />
+    <!-- Font Awesome 6.7.0 CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
+
+
     <link
       href="https://fonts.googleapis.com/css2?family=Archivo+Semi+Expanded:wght@400;600&display=swap"
       rel="stylesheet"
